--- a/src/templates/landmark_form.html
+++ b/src/templates/landmark_form.html
@@ -1,14 +1,15 @@
 <!--DOCTYPE html -->
 <html>
 
-
 <body>
-<h1>Form</h1>
+<h1>Create New landmark Form</h1>
 
 <form method='POST' action=''>{% csrf_token %}
 {{ form.as_p }}
 <input type='submit' value='Create Landmark' />
 </form>
+
+<a href="/landmarks/">See all landmarks</a>
 
 </body>
 
