--- a/src/templates/landmark_details.html
+++ b/src/templates/landmark_details.html
@@ -3,6 +3,7 @@
 
 
 <body>
+<script language=javascript src='http://maps.google.com/maps/api/js?sensor=false'></script>
 
 <h1>{{ title }}</h1>
 
@@ -17,6 +18,23 @@ description: {{ instance.description }}<br/>
 country: {{ instance.country.name }}<br/>
 created_at: {{ instance.created_at }}<br/>
 updated_at: {{ instance.updated_at }}<br/>
+latitude: {{ instance.latitude }} <br/>
+longitude: {{instance.longitude}} <br/>
+<div id="map" style="width:400px;height:400px;"></div>
+
+<script>
+function myMap() {
+    var mapOptions = {
+        center: new google.maps.LatLng("{{instance.latitude}}", "{{instance.longitude}}"),
+        zoom: 10,
+        mapTypeId: google.maps.MapTypeId.HYBRID
+    }
+var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+}
+</script>
+
+<script src="http://maps.google.com/maps/api/js?sensor=false&callback=myMap"></script>
+
 
 </body>
 
