--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 
 
-<body>
+<body style="text-align: center;">
 <a href="/landmarks/create/">create a new landmark</a>
 
 <h1>{{ title }} </h1>
@@ -18,18 +18,27 @@ created_at: {{ obj.created_at }}<br/>
 updated_at: {{ obj.updated_at }}<br/>
 latitude: {{ obj.latitude }} <br/>
 longitude: {{obj.longitude}} <br/>
+<!-- <div id="map" style="width:80%;height:500px;text-align: center;">
+</div> -->
 <br/><br/>
+<!-- <script>
+var mapDiv = document.createElement('div');
+mapDiv.id = "map{{obj.id}}";
+document.getElementsByTagName('body')[0].appendChild(mapDiv);
+</script> -->
 <script>
         function myMap() {
+            var mapDiv = document.createElement('div');
+            mapDiv.id = "map{{obj.id}}";
+            document.getElementsByTagName('body')[0].appendChild(mapDiv);
             var mapOptions = {
                 center: new google.maps.LatLng("{{obj.latitude}}", "{{obj.longitude}}"),
                 zoom: 10,
                 mapTypeId: google.maps.MapTypeId.HYBRID
             }
-        var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+        var map = new google.maps.Map(document.getElementsById('map{{obj.id}}'), mapOptions);
         }
-</script>
-        
+</script>  
         <script src="http://maps.google.com/maps/api/js?sensor=false&callback=myMap">
 </script>
         
