--- a/src/templates/landmark_details.html
+++ b/src/templates/landmark_details.html
@@ -2,7 +2,7 @@
 <html>
 
 
-<body>
+<body style="text-align: center;">
 <script language=javascript src='http://maps.google.com/maps/api/js?sensor=false'></script>
 
 <h1>{{ title }}</h1>
@@ -20,7 +20,7 @@ created_at: {{ instance.created_at }}<br/>
 updated_at: {{ instance.updated_at }}<br/>
 latitude: {{ instance.latitude }} <br/>
 longitude: {{instance.longitude}} <br/>
-<div id="map" style="width:400px;height:400px;"></div>
+<div id="map" style="width:80%;height:500px;text-align: center;"></div>
 
 <script>
 function myMap() {
