redirect to landmarks list in case of a successfully created new landmark

--- a/src/templates/landmark_form.html
+++ b/src/templates/landmark_form.html
@@ -7,7 +7,7 @@
 <form method='POST' action=''>{% csrf_token %}
 {{ form.as_p }}
  
-<input type='submit' href="/landmarks/" value='Create Landmark' />
+<input type='submit' value='Create Landmark' />
 
 </form>
 
